--- a/test/html/form.html
+++ b/test/html/form.html
@@ -79,22 +79,22 @@
                 <div class="form-group col-md-4">
                     <label>Optional Checkbox:</label>
                     <div class="form-check">
-                        <input type="checkbox" class="form-check-input" name="optCheckbox1" id="optCheckbox1">
-                        <label for="optCheckbox1">Checkbox</label>
+                        <input type="checkbox" class="form-check-input" name="optCheckbox" id="optCheckbox">
+                        <label for="optCheckbox">Checkbox</label>
                     </div>
                 </div>
                 <div class="form-group col-md-4">
                     <label>Required Checkbox:</label>
                     <div class="form-check">
-                        <input type="checkbox" class="form-check-input" name="reqCheckbox1" id="reqCheckbox1" required>
-                        <label for="reqCheckbox1">Checkbox</label>
+                        <input type="checkbox" class="form-check-input" name="reqCheckbox" id="reqCheckbox" required>
+                        <label for="reqCheckbox">Checkbox</label>
                     </div>
                 </div>
                 <div class="form-group col-md-4">
                     <label>Disabled Checkbox:</label>
                     <div class="form-check">
-                        <input type="checkbox" class="form-check-input" name="disCheckbox1" id="disCheckbox1" disabled>
-                        <label for="disCheckbox1">Checkbox</label>
+                        <input type="checkbox" class="form-check-input" name="disCheckbox" id="disCheckbox" disabled>
+                        <label for="disCheckbox">Checkbox</label>
                     </div>
                 </div>
             </div>
