--- a/test/html/modal.html
+++ b/test/html/modal.html
@@ -23,7 +23,7 @@
 
 <div class="card">
     <div class="card-body">
-        <button type="button" class="btn btn-block btn-primary" data-toggle="modal" data-target="#test-modal">
+        <button type="button" class="btn btn-block btn-primary" id="open-modal-button" data-toggle="modal" data-target="#test-modal">
             Open Modal
         </button>
 
