Started working on YAML support for navs
- Started updating test HTML
- Added classes NavLinkObject and NavMenuObject, which will be used to
represent links and dropdowns/mobile menus

--- a/test/html/navbar.html
+++ b/test/html/navbar.html
@@ -32,6 +32,17 @@
             <li class="nav-item">
                 <a class="nav-link" href="#section3">Section 3</a>
             </li>
+            <!-- TODO: add hover -->
+            <li class="dropdown">
+              <a class="dropdown-toggle nav-link" data-toggle="dropdown" href="#" aria-expanded="false">
+                Dropdown<span class="caret"></span>
+              </a>
+              <ul class="dropdown-menu">
+                <li><a href="#">Page 1-1</a></li>
+                <li><a href="#">Page 1-2</a></li>
+                <li><a href="#">Page 1-3</a></li>
+              </ul>
+            </li>
         </ul>
     </nav>
 
