--- a/test/html/navbar.html
+++ b/test/html/navbar.html
@@ -23,6 +23,7 @@
 
     <nav class="navbar navbar-expand bg-light">
         <ul class="navbar-nav">
+            <!-- TODO: page links -->
             <li class="nav-item">
                 <a class="nav-link" href="#section1">Section 1</a>
             </li>
@@ -32,12 +33,12 @@
             <li class="nav-item">
                 <a class="nav-link" href="#section3">Section 3</a>
             </li>
-            <!-- TODO: add hover -->
+            <!-- TODO: hover dropdown -->
             <li class="dropdown">
-              <a class="dropdown-toggle nav-link" data-toggle="dropdown" href="#" aria-expanded="false">
-                Dropdown<span class="caret"></span>
+              <a class="dropdown-toggle nav-link" id="click-menu-link" data-toggle="dropdown" href="#" aria-expanded="false">
+                Dropdown (Click)<span class="caret"></span>
               </a>
-              <ul class="dropdown-menu">
+              <ul class="dropdown-menu" id="click-menu">
                 <li><a href="#">Page 1-1</a></li>
                 <li><a href="#">Page 1-2</a></li>
                 <li><a href="#">Page 1-3</a></li>
@@ -57,7 +58,11 @@
         <div class="container my-5" id="section1">
             <h2>Section 1</h2>
             <p>
-            Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Incommoda autem et commoda-ita enim estmata et dustmata appello-communia esse voluerunt, paria noluerunt. Ergo id est convenienter naturae vivere, a natura discedere. Re mihi non aeque satisfacit, et quidem locis pluribus. Eam tum adesse, cum dolor omnis absit; Ut proverbia non nulla veriora sint quam vestra dogmata. Quem si tenueris, non modo meum Ciceronem, sed etiam me ipsum abducas licebit. In his igitur partibus duabus nihil erat, quod Zeno commutare gestiret. Illa tamen simplicia, vestra versuta. Duo Reges: constructio interrete. Quem si tenueris, non modo meum Ciceronem, sed etiam me ipsum abducas licebit. 
+
+            Sed vos squalidius, illorum vides quam niteat oratio. Quid, quod homines infima fortuna, nulla spe rerum gerendarum, opifices denique delectantur historia? Ita multo sanguine profuso in laetitia et in victoria est mortuus. Nam si beatus umquam fuisset, beatam vitam usque ad illum a Cyro extructum rogum pertulisset. Illud non continuo, ut aeque incontentae. 
+
+            Sed residamus, inquit, si placet. Faceres tu quidem, Torquate, haec omnia; Urgent tamen et nihil remittunt. Huius ego nunc auctoritatem sequens idem faciam. Nec enim, dum metuit, iustus est, et certe, si metuere destiterit, non erit; Cupit enim dcere nihil posse ad beatam vitam deesse sapienti. Age sane, inquam.
             </p>
             <p>
             <a class="btn btn-secondary" href="#" role="button">View details &raquo;</a>
@@ -67,7 +72,11 @@
         <div class="container my-5" id="section2">
             <h2>Section 2</h2>
             <p>
-            Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Incommoda autem et commoda-ita enim estmata et dustmata appello-communia esse voluerunt, paria noluerunt. Ergo id est convenienter naturae vivere, a natura discedere. Re mihi non aeque satisfacit, et quidem locis pluribus. Eam tum adesse, cum dolor omnis absit; Ut proverbia non nulla veriora sint quam vestra dogmata. Quem si tenueris, non modo meum Ciceronem, sed etiam me ipsum abducas licebit. In his igitur partibus duabus nihil erat, quod Zeno commutare gestiret. Illa tamen simplicia, vestra versuta. Duo Reges: constructio interrete. Quem si tenueris, non modo meum Ciceronem, sed etiam me ipsum abducas licebit. 
+
+            Sed vos squalidius, illorum vides quam niteat oratio. Quid, quod homines infima fortuna, nulla spe rerum gerendarum, opifices denique delectantur historia? Ita multo sanguine profuso in laetitia et in victoria est mortuus. Nam si beatus umquam fuisset, beatam vitam usque ad illum a Cyro extructum rogum pertulisset. Illud non continuo, ut aeque incontentae. 
+
+            Sed residamus, inquit, si placet. Faceres tu quidem, Torquate, haec omnia; Urgent tamen et nihil remittunt. Huius ego nunc auctoritatem sequens idem faciam. Nec enim, dum metuit, iustus est, et certe, si metuere destiterit, non erit; Cupit enim dcere nihil posse ad beatam vitam deesse sapienti. Age sane, inquam.
             </p>
             <p>
             <a class="btn btn-secondary" href="#" role="button">View details &raquo;</a>
@@ -77,7 +86,11 @@
         <div class="container my-5" id="section3">
             <h2>Section 3</h2>
             <p>
-            Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Incommoda autem et commoda-ita enim estmata et dustmata appello-communia esse voluerunt, paria noluerunt. Ergo id est convenienter naturae vivere, a natura discedere. Re mihi non aeque satisfacit, et quidem locis pluribus. Eam tum adesse, cum dolor omnis absit; Ut proverbia non nulla veriora sint quam vestra dogmata. Quem si tenueris, non modo meum Ciceronem, sed etiam me ipsum abducas licebit. In his igitur partibus duabus nihil erat, quod Zeno commutare gestiret. Illa tamen simplicia, vestra versuta. Duo Reges: constructio interrete. Quem si tenueris, non modo meum Ciceronem, sed etiam me ipsum abducas licebit. 
+
+            Sed vos squalidius, illorum vides quam niteat oratio. Quid, quod homines infima fortuna, nulla spe rerum gerendarum, opifices denique delectantur historia? Ita multo sanguine profuso in laetitia et in victoria est mortuus. Nam si beatus umquam fuisset, beatam vitam usque ad illum a Cyro extructum rogum pertulisset. Illud non continuo, ut aeque incontentae. 
+
+            Sed residamus, inquit, si placet. Faceres tu quidem, Torquate, haec omnia; Urgent tamen et nihil remittunt. Huius ego nunc auctoritatem sequens idem faciam. Nec enim, dum metuit, iustus est, et certe, si metuere destiterit, non erit; Cupit enim dcere nihil posse ad beatam vitam deesse sapienti. Age sane, inquam.
             </p>
             <p>
             <a class="btn btn-secondary" href="#" role="button">View details &raquo;</a>
