--- a/test/html/navbar.html
+++ b/test/html/navbar.html
@@ -7,6 +7,7 @@
     <title>Navbar</title>
 
     <link rel="stylesheet" href="res/css/bootstrap.min.css">
+    <link rel="stylesheet" href="res/css/navbar.css">
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
             integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
@@ -33,7 +34,16 @@
             <li class="nav-item">
                 <a class="nav-link" href="#section3">Section 3</a>
             </li>
-            <!-- TODO: hover dropdown -->
+            <li class="dropdown hover-dropdown">
+              <a class="dropdown-toggle nav-link" id="hover-menu-link" href="#">
+                Dropdown (Hover)<span class="caret"></span>
+              </a>
+              <ul class="dropdown-menu" id="click-menu">
+                <li><a href="#">Page 1-1</a></li>
+                <li><a href="#">Page 1-2</a></li>
+                <li><a href="#">Page 1-3</a></li>
+              </ul>
+            </li>
             <li class="dropdown">
               <a class="dropdown-toggle nav-link" id="click-menu-link" data-toggle="dropdown" href="#" aria-expanded="false">
                 Dropdown (Click)<span class="caret"></span>
