Updated test navbar markup to use bootstrap 4 classes

--- a/test/html/navbar.html
+++ b/test/html/navbar.html
@@ -22,7 +22,7 @@
   </head>
   <body>
 
-    <nav class="navbar navbar-expand bg-light">
+    <nav class="navbar navbar-expand navbar-light bg-light">
       <div class="navbar-header">
         <a class="navbar-brand" href="index.html">Home</a>
       </div>
