--- a/test/html/collapsible_navbar.html
+++ b/test/html/collapsible_navbar.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Navbar</title>
+    <title>Navbar (Collapsed)</title>
 
     <link rel="stylesheet" href="res/css/bootstrap.min.css">
     <link rel="stylesheet" href="res/css/navbar.css">
@@ -12,12 +12,10 @@
   </head>
   <body>
 
-    <nav class="navbar bg-light">
+    <nav class="navbar navbar-light bg-light">
       <div class="navbar-header">
-        <button type="button" class="navbar-toggle" id="navbar-toggle" data-toggle="collapse" data-target="#nav-menu">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span> 
+        <button type="button" class="navbar-toggler" id="navbar-toggle" data-toggle="collapse" data-target="#nav-menu">
+          <span class="navbar-toggler-icon"></span>
         </button>
         <a class="navbar-brand" href="index.html">Home</a>
       </div>
